--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,7 +21,7 @@ jobs:
           tar -xf $MARP_BINARY
       - name: Build slide deck
         run: |
-          ./marp static/introduction.md -o public/introduction.html
+          ./marp slide_deck/introduction.md -o public/introduction.html
       - name: Deploy slide deck
         uses: peaceiris/actions-gh-pages@v3
         with:
