--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7, <3.10"
+python = ">=3.7, <3.11"
+matplotlib = "^3.4"
 numpy = "^1.21"
 sympy = "^1.10.1"
 
